--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     }
     .navbar,.fixed-top{
         position: fixed;
-        top: 25px!important;
+        top: 24px!important;
     }
     .left,.right,.bottom-navbar,.left-bottom-navbar,.right-bottom-navbar{
         display: none;
@@ -45,7 +45,7 @@ body{
         top: 50px!important;
     }
     .search-container{
-        top: 45px!important;
+        top: 100px!important;
     }
 }
   @media(max-width:991px){
@@ -133,9 +133,9 @@ body{
            .button-main {
             font-size: 20px!important;
          }
-         .box{
-            padding-left: 70px!important;
-           }
+         /* .box{
+            padding-left: 0px!important;
+           } */
            
  }
  
@@ -172,9 +172,9 @@ body{
            .logo_main img{
             width: 120px!important;
         }
-        .box{
+        /* .box{
             padding-left: 50px!important;
-           }
+           } */
 
  }
 
@@ -469,6 +469,9 @@ color: #285531;
     margin:0px;
     float: left;
   }
+  .box{
+    margin-right: 0!important;
+  }
   .box button{
     font-size: 30px;
     color: #285531;
@@ -477,8 +480,8 @@ color: #285531;
   .box.arrow-right:after {
     content: " ";
     position: absolute;
-    right: -50px;
-    top: 150px;
+    right: -55px;
+    top: 100px;
     border-top: 80px solid transparent;
     border-right: none;
     border-left: 80px solid #285531;
@@ -737,3 +740,23 @@ display: none;
 .footer button{
     font-size: 14px!important;
 }
+
+
+.contenttwo{
+    background-color: #285531;
+}
+.contenttwo2{
+    background-color: #285531;
+    margin-right: 0!important;
+    }
+.test{
+    margin-right: 0!important;
+}
+.custom-container {
+    margin-right: 15px!important;
+}
+    .contenttwo2-image{
+        background-image: url(images/Layer\ 43.png);
+        background-size: cover;
+        background-position: right;
+    }
