--- a/style3.css
+++ b/style3.css
@@ -107,7 +107,7 @@ body{
      .footer-right p {
         font-size: 15px!important;
      }
-     .contentthree-container ul,li{
+     .contentthree-container ul{
         font-size: 16px;
         }
         .image-content{
@@ -566,6 +566,10 @@ align-items: flex-end;
     .footer-bottom ul{
         display: flex!important;
         justify-content: center!important;
+    }
+    .footer-button-container{
+        position: relative;
+        left: 15px;
     }
 
 }
