--- a/style2.css
+++ b/style2.css
@@ -44,7 +44,7 @@ body{
     }
 .page1{
     position: relative;
-    top: 53px!important;
+    top: 55px!important;
 }
 
   }
@@ -80,10 +80,7 @@ body{
             max-width: 100vh!important;
             min-height: 100%;
            }
-           .bottom-navbar{
-            position: relative;
-            top: 43px!important;
-           }
+
  }
  
  @media (min-width: 992px) and (max-width: 1440px) {
@@ -103,20 +100,16 @@ body{
         font-size: 13px!important;
      }
      .button-main {
-        font-size: 18px!important;
+        font-size: 20px!important;
      }
      .footer-right p {
         font-size: 15px!important;
      }
-     .contentthree-container ul,li{
+     .contentthree-container ul{
         font-size: 16px;
         }
         .image-content{
             min-height: 50%;
-           }
-           .bottom-navbar{
-            position: relative;
-            top: 43px!important;
            }
            .logo_main img{
             width: 150px!important;
@@ -200,6 +193,9 @@ body{
    .bottom-navbar ul{
     margin: 0;
    }
+   .bottom-navbar li{
+    
+   }
 .line{
     border-right: 2px solid white;
     height: 20px;
@@ -221,7 +217,7 @@ body{
 .page1{
     font-family: 'Source Sans 3', sans-serif;
     position: relative;
-    top: 87px;
+    top: 93px;
 }
 .navbar {
     background-color: #0d572d;
@@ -287,7 +283,7 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 position: fixed;
-top: 45px;
+top: 43px;
 background-color: #fff;
 width: 100%;
 color: #285531;
@@ -506,6 +502,11 @@ align-items: flex-end;
         display: flex!important;
         justify-content: center!important;
     }
+    .footer-button-container{
+        position: relative;
+        left: 15px;
+    }
+
 }
 
 @media (min-width: 992px) and (max-width: 1440px) {
