--- a/style4.css
+++ b/style4.css
@@ -79,8 +79,11 @@ body{
           }
            .bottom-navbar{
             position: relative;
-            top: 43px!important;
+            top: 41px!important;
            }
+           .content-customermain-hero p{
+            font-size: 28px!important;
+        }
 
            
  }
@@ -119,10 +122,13 @@ body{
            }
            .bottom-navbar{
             position: relative;
-            top: 43px!important;
+            top: 41px!important;
            }
            .logo_main img{
             width: 120px!important;
+        }
+        .content-customermain-hero p{
+            font-size: 20px!important;
         }
 
  }
@@ -182,7 +188,7 @@ body{
         }
         .search-container{
             position: fixed;
-            top: 92px!important;
+            top: 91px!important;
             padding-top: 70px!important;
             padding-bottom: 40px!important;
         }
@@ -201,7 +207,10 @@ body{
             }
             .navbar,.fixed-top{
                 position: fixed;
-                top: 24px!important;
+                top: 23px!important;
+            }
+            .content-customermain-hero p{
+                font-size: 18px!important;
             }
  }
 a{
@@ -467,16 +476,21 @@ color: #285531;
     color: white;
     text-align: center;
     }
-  .image-text {
-    position: absolute;
-    bottom: 25px;
-    left: 0;
-    width: 95%;
-    margin-left: 5px;
-    margin-right: 5px;
-    background-color: white;
-    text-align: center;
-  }
+    .image-text {
+        position: absolute;
+        bottom: 25px;
+        left: 0;
+        width: 95%;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding: 5px;
+        background-color: white;
+        text-align: center;
+        min-height: 130px!important;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
   
   .image-text::before {
     content: '';
@@ -572,7 +586,7 @@ align-items: flex-end;
     background-color: #b4c79e;
     color: #285531;
     position: fixed;
-    top: 94px;
+    top: 91px;
     width: 100%;
     /* display: none; */
 }
