--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   .navbar,
   .fixed-top {
     position: fixed;
-    top: 24px !important;
+    top: 23px !important;
   }
   .left,
   .right,
@@ -92,7 +92,7 @@ body {
   }
   .bottom-navbar {
     position: relative;
-    top: 52px !important;
+    top: 48px !important;
   }
   .top-navbar a {
     font-size: 13px;
@@ -136,9 +136,9 @@ body {
     position: relative;
     padding-left: 150px !important;
   }
-  /* .box{
-            padding-left: 0px!important;
-           } */
+.image-text h6{
+    padding-left: 20px!important;
+}
 }
 
 @media (min-width: 992px) and (max-width: 1440px) {
@@ -150,12 +150,12 @@ body {
     font-size: 16px !important;
   }
   h5 {
-    font-size: 14px !important;
+    font-size: 19px !important;
     font-weight: bold !important;
     color: #285531 !important;
   }
   h6 {
-    font-size: 13px !important;
+    font-size: 15px !important;
   }
   .button-main {
     font-size: 18px !important;
@@ -167,10 +167,7 @@ body {
     font-size: 16px;
   }
 
-  .bottom-navbar {
-    position: relative;
-    top: 52px !important;
-  }
+
   .logo_main img {
     width: 120px !important;
   }
@@ -178,9 +175,13 @@ body {
     position: relative;
     padding-left: 100px !important;
   }
-  /* .box{
-            padding-left: 50px!important;
-           } */
+  .image-text{
+   
+    min-height: 140px!important;
+}
+.image-text h6{
+     padding-left: 10px!important;
+}
 }
 
 @media (max-width: 991px) {
@@ -225,7 +226,7 @@ body {
   .contentthree-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+
     padding-left: 0px !important;
   }
   .contentthree-container ul {
@@ -268,6 +269,13 @@ body {
   .contenttwo2 {
     position: relative;
     margin-left: 0px !important;
+  }
+  .image-text{
+    min-height: 150px!important;
+    
+  }
+  .image-text h6{
+    padding-left: 10px!important;
   }
 }
 
@@ -502,12 +510,6 @@ body {
 .contenttwo-button {
   font-size: 38px;
 }
-/* .image-box2{
-    background-image: url(images/Layer\ 43.png);
-   background-size: cover;
-   min-height: 50%;
-   min-width: 100vw;
-} */
 
 .image-container {
   position: relative;
@@ -524,8 +526,12 @@ body {
   width: 95%;
   margin-left: 5px;
   margin-right: 5px;
+  padding: 5px;
   background-color: white;
-  text-align: center;
+  min-height: 130px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .image-text::before {
@@ -552,7 +558,7 @@ body {
   padding-left: 0;
 }
 .footeraccept {
-  font-size: 12px;
+  font-size: 13px;
 }
 .footer-bottom {
   font-size: 13px;
@@ -595,10 +601,6 @@ a {
 
 /*layout1*/
 
-/* .contentfour-container{
-    padding-left: 80px!important;
-    padding-right: 80px!important;
-} */
 @media (max-width: 2576px) {
   .footer-bottome2 ul,
   .footer-bottome2 p {
@@ -612,6 +614,9 @@ a {
   .footer-bottom ul {
     display: flex !important;
     justify-content: center !important;
+  }
+  .contentthree span {
+    font-size: 24px;
   }
 }
 
@@ -630,7 +635,7 @@ a {
     font-size: 15px !important;
   }
   .contentthree span {
-    font-size: 13px;
+    font-size: 18px;
   }
 }
 
@@ -679,12 +684,10 @@ a {
     display: none;
   }
   .contentthree-container span {
-    font-size: 15px;
+    font-size: 20px;
   }
   .contentthree-container li {
     font-size: 15px;
-  }
-  .contentfour-image {
   }
   .input-group {
     display: flex;
@@ -707,23 +710,6 @@ a {
   }
 }
 
-.menu-navbar {
-  z-index: 100 !important;
-}
-
-.left2 ul {
-  display: flex;
-  list-style-type: none;
-  color: white;
-  margin: 0 !important;
-}
-
-.right2 ul {
-  list-style-type: none;
-  display: flex;
-  color: white;
-  margin: 0 !important;
-}
 
 .top-menu {
   background-color: #0d572d;
@@ -749,9 +735,7 @@ a {
   background-color: #285531;
   margin-right: 0 !important;
 }
-.test {
-  margin-right: 0 !important;
-}
+
 .custom-container {
   margin-right: 15px !important;
 }
